2016-11-05  Eric Herman <eric@freesa.org>

	fix a bug in ehbi_bytes_shift_left

	it would read bytes from off the end of the array!

	* tests/test-shift-left.c: demostrate the bug
	* src/ehbigint.c: fix the bug
	* Makefile.am: include the new test
	* .gitignore: exclude the new test

2016-11-04  Eric Herman <eric@freesa.org>

	reorganize code: split logging and util functions out
	replace EHBI_ENSURE_POSIX with EBHI_CAN_BACKTRACE
	prefix some internal functions with ehbi_ for clarity

	* src/ehbigint-log.h: renamed from ehbigint-error.h
	* src/ehbigint-error.h: renamed to ehbigint-log.h
	* src/ehbigint-log.c: logging functions
	* src/ehbigint-util.h: decimal-to-hex functions, stack-alloc
	* src/ehbigint-util.c: extracted from ehbigint.c
	* src/ehbigint.h: pulled error codes back in
	* src/ehbigint.c: use the new headers, moved support functions out
	* demos/bi-calc.c: cleaned this up a bit
	* Makefile.am: use the new headers and such

2016-11-03  Eric Herman <eric@freesa.org>

	added LGPLv3+ header boilerplate to sources

2016-11-02  Eric Herman <eric@freesa.org>

	split out error related definitions to separate header

	* src/ehbigint.h: remove error related definitions
	* src/ehbigint-error.h: copied from src/ehbigint.h
	* src/ehbigint.c: include the new header
	* Makefile.am: reference the new header

2016-10-23  Eric Herman <eric@freesa.org>

	add "ehbi_bytes_shift_left" function, improve division

	division is now implemented using a "long divsion" approach

	* src/ehbigint.h: add ehbi_bytes_shift_left
	* src/ehbigint.c: ehbi_bytes_shift_left, improve divsion

2016-10-22  Eric Herman <eric@freesa.org>

	* src/ehbigint.c: avoid indexing outside of the array
	* Makefile.am: less verbose valgrind (add "-q")

2016-10-05  Eric Herman <eric@freesa.org>

	* Makefile.old: not needed any more

2016-10-05  Eric Herman <eric@freesa.org>

	License files tidy (LGPLv3+), to make it more github friendly

	* COPYING: replace boilerplate LGPLv3+ with misc/lgpl-3.0.txt